Main commit: added processing of pull requests
Now the bot receives commit info,
gets names of branches,
clones repository and checkouts head branch of the PR,
gets changed pieces of code in *.nix files,
format changed files by nixfmt utility,
moves changed and formatted pieces oа code back to
unformatted files, and make new branch and PR to head branch
of the given pull request.

--- a/package.yaml
+++ b/package.yaml
@@ -73,10 +73,16 @@ library:
   - autoexporter
   dependencies:
   - aeson-options
+  - async
+  - directory
+  - github ^>= 0.23
   - github-webhooks
   - http-client
+  - http-types
   - http-client-tls
+  - megaparsec
   - mtl
+  - shelly
   - text
   - time
   - unliftio
@@ -99,5 +105,6 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - aeson
+    - github ^>= 0.23
     - nixfmt-bot
     - optparse-applicative
