--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-/.cabal-sandbox/
-/cabal.sandbox.config
-/dist/
-/dist-newstyle
 /.ghc.environment.*
 /result
 .DS_Store
-cabal.project.local
-cabal.project.local~
-/.nix-tools.cache
+/.stack-to-nix.cache
+/.stack-work/
+/*.cabal
