--- a/cabal.project
+++ b/cabal.project
@@ -2,12 +2,5 @@ packages: .
 
 source-repository-package
     type: git
-    location: https://github.com/serokell/lootbox.git
-    tag: 2a17f458a4cfe8ad3e34674318112621bd31bd7e
-    subdir: code/base
-
-source-repository-package
-    type: git
-    location: https://github.com/serokell/lootbox.git
-    tag: 2a17f458a4cfe8ad3e34674318112621bd31bd7e
-    subdir: code/prelude
+    location: https://github.com/Haskell-mouse/github
+    tag: 8bb19193fd4ec92684651a2ff454593ddcafee86
