--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,7 @@ default-extensions:
 - MonadFailDesugaring
 - MultiParamTypeClasses
 - MultiWayIf
+- NoImplicitPrelude
 - NamedFieldPuns
 - OverloadedStrings
 - OverloadedLabels
@@ -52,9 +53,8 @@ default-extensions:
 - TypeApplications
 
 dependencies:
-- base-noprelude >= 4.9 && < 5
+- base >= 4.9 && < 5
 - bytestring
-- loot-prelude
 - universum
 - microlens-platform
 
@@ -108,3 +108,4 @@ executables:
     - github ^>= 0.23
     - nixfmt-bot
     - optparse-applicative
+    - universum
